--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -16,7 +16,7 @@ body {
 form {
     background: white;
     padding: 60px;
-    width: 550px;
+    width: 100%;
     max-width: calc(100% - 60px);
 }
 
@@ -39,3 +39,18 @@ form button {
     border: none;
     font-size: 18px;  
 }
+
+.scroll-bg {
+    width: 400px;
+    margin: 10% auto;
+}
+
+.scroll-div {
+    width: 500px;
+    background: rgb(11, 11, 11);
+    height: 650px;
+    overflow: hidden;
+    overflow: scroll;
+}
+
+
