--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -53,4 +53,22 @@ form button {
     overflow: scroll;
 }
 
+.footer-bottom {
+    margin-bottom: 50px;
+    text-align: center;
+  }
+
+.copyright {
+    color: var(--sonic-silver);
+    font-size: var(--fs-8);
+    font-weight: var(--weight-500);
+    text-transform: capitalize;
+    letter-spacing: 1.2px;
+  }
+  
+  .copyright a {
+    display: inline;
+    color: inherit;
+  }
+
 
