--- a/assets/css/mainpage.css
+++ b/assets/css/mainpage.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: fantasy;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
     min-height: 100vh;
-    background: linear-gradient(45deg, #ff216d, #2196f3);
+    background: linear-gradient(45deg, white, black, purple);
 }
 
 .navigation {
@@ -138,7 +138,7 @@ ul li a:hover {
 
 .content p{
     margin: 20px auto;
-    color: black;
+    color: #fff;
     font-weight: 100;
     line-height: 25px;
 }
@@ -157,3 +157,21 @@ button {
     position: relative;
     overflow: hidden;
 }
+
+.footer-bottom {
+    margin-bottom: 50px;
+    text-align: center;
+  }
+
+.copyright {
+    color: var(--sonic-silver);
+    font-size: var(--fs-8);
+    font-weight: var(--weight-500);
+    text-transform: capitalize;
+    letter-spacing: 1.2px;
+  }
+  
+  .copyright a {
+    display: inline;
+    color: inherit;
+  }
