--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -4,6 +4,23 @@
     box-sizing: border-box;
 }
 
+
+section {
+    padding: 40px 15%;
+}
+
+.contact {
+    background: #101010;
+    height: 100%;
+    width: 100%;
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    align-items: center;
+    grid-gap: 6rem;
+}
+
+
 body {
     font-family: 'Inter';
     height: 100%;
