--- a/assets/css/contactus.css
+++ b/assets/css/contactus.css
@@ -19,13 +19,13 @@ section {
     grid-gap: 6rem;
 }
 
-.contact-form h1 {
-    font-size: 80px;
+.contact-form h4 {
+    font-size: 40px;
     color: #fff;
     margin-bottom: 20px;
 }
 span {
-    color: blue;
+    color: gray;
 }
 
 .contact-form p{
@@ -74,7 +74,7 @@ form textarea {
 }
 
 .contact-form form .btn:hover {
-    border: 2px solid#f9004d;
+    border: 2px solid #f9004d;
     background: transparent;
     transform: scale(1.1);
 }
