--- a/soon/soon.css
+++ b/soon/soon.css
@@ -20,7 +20,7 @@ h2 {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background-image: url("./soon/background.png");
+  background-image: url("/soon/background.png");
   background-size: 100%;
 }
 
