--- a/Asssets/Yoco-Service_form/Regestration-Form/style.css
+++ b/Asssets/Yoco-Service_form/Regestration-Form/style.css
@@ -258,8 +258,8 @@ header .slider{
   font-size: 20px;
 }
 .price-details .price::after{
-  content: "/month";
-  right: -55px;
+  content: "/annually";
+  right: -65px;
   bottom: 17px;
   font-size: 13px;
 }
