--- a/Asssets/TermsofService/style.css
+++ b/Asssets/TermsofService/style.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  background: url(image.jpg);
+  background: url(/Asssets/TermsofService/Rectangle\ 1.png);
   min-height: 100vh;
   display: flex;
   align-items: center;
